--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name=”description“ content=“注文受付ページ“ />
+    <meta name=”description“ content=“佐賀東高等学校専用注文受付ページ・丸徳の弁当の注文はこちらから。“ />
     <link rel="stylesheet" href="stylesheet.css">
     <title>丸徳弁当</title>
     <style>
